--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 <head>
     <meta charset="UTF-8">
-    <title>我的資訊網頁</title>
+    <title>動畫歌曲</title>
 </head>
 <body>
     <h1>我的資訊頁面</h1>
@@ -15,3 +15,4 @@
     </ul>
 </body>
 </html>
+
