--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <title>動畫歌曲</title>
+    <link rel="icon" type="image/x-icon" href="favicon.ico">
 </head>
 <body>
     <h1>我的資訊頁面</h1>
@@ -15,4 +16,5 @@
     </ul>
 </body>
 </html>
+
 
