--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <title>動畫歌曲</title>
-    <link rel="icon" type="image/x-icon" href="favicon.ico">
+    <link rel="icon" type="image/x-icon" href="商標.ico">
 </head>
 <body>
     <h1>我的資訊頁面</h1>
@@ -16,5 +16,6 @@
     </ul>
 </body>
 </html>
+
 
 
