--- a/index.html
+++ b/index.html
@@ -1,9 +1,9 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <meta charset="UTF-8">
-    <title>動畫歌曲</title>
-    <link rel="icon" type="image/x-icon" href="商標.ico">
+    <meta charset="UTF-8"> <!--文字編碼-->
+    <title>動畫歌曲</title> <!--網站名稱-->
+    <link rel="icon" type="image/x-icon" href="商標.ico"> <!--網站縮圖-->
 </head>
 <body>
     <h1>我的資訊頁面</h1>
@@ -14,8 +14,20 @@
         <li><a href="https://google.com" target="_blank">Google</a></li>
         <li><a href="https://youtube.com" target="_blank">YouTube</a></li>
     </ul>
+
+    <h2>我的影片</h2>
+    <iframe 
+        width="560" 
+        height="315" 
+        src="https://www.youtube.com/embed/hlNWfslbSGA" 
+        title="YouTube video player" 
+        frameborder="0" 
+        allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" 
+        allowfullscreen>
+    </iframe>
 </body>
 </html>
+
 
 
 
