--- a/index.html
+++ b/index.html
@@ -16,16 +16,18 @@
     </ul>
 
     <h2>我的影片</h2>
-    <div style="position:relative; padding-bottom:56.25%; height:0; overflow:hidden;">
-        <iframe 
-            src="https://www.youtube.com/embed/hlNWfslbSGA" 
-            style="position:absolute; top:0; left:0; width:100%; height:100%;" 
-            frameborder="0" 
-            allowfullscreen>
-        </iframe>
-    </div>
+    <iframe 
+        width="560" 
+        height="315" 
+        src="https://www.youtube.com/embed/hlNWfslbSGA" 
+        title="YouTube video player" 
+        frameborder="0" 
+        allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" 
+        allowfullscreen>
+    </iframe>
 </body>
 </html>
+
 
 
 
